--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      SF Bitcoin Devs{% if page.title %} | {{ page.title }}{% endif %}
+      ₿uilders{% if page.title %} | {{ page.title }}{% endif %}
     </title>
     <meta name="description" content="Website for the ₿uilder Meetup.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">SF Bitcoin Devs</a></h1>
+      <h1><a href="/">₿uilders</a></h1>
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
