--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">₿uilders</a></h1>
+      <h1><a href="/BitcoinBuilderSF">₿uilders</a></h1>
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
