Workaround for CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
     <meta name="author" content="₿uilder">
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="/feed.xml">
     <link href="/index.css" rel="stylesheet" type="text/css">
+     
+    <!-- TODO: Delete these once a custom domain is in place -->
+    <link href="./index.css" rel="stylesheet" type="text/css">
+    <link href="../index.css" rel="stylesheet" type="text/css">
         
     <style>
       header {
@@ -29,6 +33,7 @@
   </head>
   <body>
     <header>
+      <!-- TODO: Update this link once a custom domain is in place -->
       <h1><a href="/BitcoinBuilderSF/">₿uilders</a></h1>
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners" target="_blank">Meetup</a>
