--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
       <!-- TODO: Update this link once a custom domain is in place -->
       <h1><a href="/BitcoinBuilderSF/">₿uilders</a></h1>
       <nav>
-        <a href="https://www.meetup.com/bay-area-bitcoiners" target="_blank">Meetup</a>
+        <a href="https://www.meetup.com/bay-area-bitcoiners/events/308542831" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
         <a href="https://github.com/BitcoinBuilderSF" target="_blank">GitHub</a>
         <a href="/feed.xml">RSS</a>
