--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   ₿uilder is a monthly meetup focused on discussing product, design, and AI tools for individuals building on bitcoin. 
   Everyone is welcome, whether you're an experienced product manager or designer, just starting out, or simply curious to learn.
 </p>
-
+<img src="https://avatars.githubusercontent.com/u/215772759?v=4" alt="Bitcoin Builder SF Logo" style="max-width: 25%; height: auto;">
 <h2>Socratic Seminars</h2>
 <ul class="posts">
   {% for page in section.pages %}
