--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners/events/308542831" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
-        <a href="https://github.com/BitcoinBuilderSF" target="_blank">GitHub</a>
+        <a href="https://github.com/BitcoinBuilderSF/BitcoinBuilderSF" target="_blank">GitHub</a>
         <a href="/feed.xml">RSS</a>
         <a href="https://sfbitcoindevs.org" target="_blank">BitDevs</a>
         <a href="https://sflightningdevs.org" target="_blank">LitDevs</a>
