Updating title name

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ₿uilders{% if page.title %} | {{ page.title }}{% endif %}
+      ₿uilder{% if page.title %} | {{ page.title }}{% endif %}
     </title>
     <meta name="description" content="Website for the ₿uilder Meetup.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +34,7 @@
   <body>
     <header>
       <!-- TODO: Update this link once a custom domain is in place -->
-      <h1><a href="/BitcoinBuilderSF/">₿uilders</a></h1>
+      <h1><a href="/BitcoinBuilderSF/">₿uilder</a></h1>
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners/events/308542831" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
