--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,7 @@
   </head>
   <body>
     <header>
-      <!-- TODO: Update this link once a custom domain is in place -->
-      <h1><a href="https://bitcoinbuildersf.com">₿uilder</a></h1>
+      <h1><a href="https://wwww.bitcoinbuildersf.com">₿uilder</a></h1>
       <nav>
         <a href="https://www.meetup.com/bay-area-bitcoiners/events/308542831" target="_blank">Meetup</a>
         <a href="https://twitter.com/bbuildersf" target="_blank">Twitter</a>
