putting back cname

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      ₿uilderMars{% if page.title %} | {{ page.title }}{% endif %}
+      ₿uilder Mars{% if page.title %} | {{ page.title }}{% endif %}
     </title>
     <meta name="description" content="Website for the ₿uilder Meetup.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
