--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">₿uilder Mars</a></h1>
+      <h1><a href="/">₿uilderMars</a></h1>
       <nav>
         <a href="https://www.meetup.com/builder-mars" target="_blank">Meetup</a>
         <a href="https://twitter.com/buildermars" target="_blank">Twitter</a>
